# archie-ai-agent

./: .env.example  .gitignore  .mcp.json  .mypy.ini  Dockerfile  Makefile  README.md  debug_schema.py  docker-compose.yml  execute_tests.sh  main.py  openrouter_model_catalog.md  pyproject.toml  pytest.ini
.claude/: settings.json
.claude/agents/: analyst.md  explorer.md
.claude/skills/: commit.md  docs.md  jira.md
.github/: copilot-instructions.md
.github/agents/: eval-improver.agent.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
agent_docs/: code_style.md  logging.md
app/: __init__.py  agent_builder.py  api_controller.py  chat.py  chat_service.py  config.py  conversation_service.py  endpoints.py  message_service.py  models.py  openai_client.py  response_understand.py  state.py  tools.py  utils.py  voice.py  ws_docs.py
app/agent/: __init__.py  agent_factory.py  builder.py  gemini_client.py  openai_client.py  prompt_builder.py  state.py  state_service.py  tools.py
app/backend/: gemini_client.py  google_calendar_client.py  openai_client.py  openrouter_client.py  spotify_client.py  state_service.py  tool_result_store.py
app/models/: orchestration_sgr.py  output_models.py  response_models.py  state_models.py  tool_models.py  ws_models.py
app/prompts/: assistant_prompt.jinja2  main_agent_prompt.jinja2  persona_bro.jinja2  persona_business.jinja2  persona_flirty.jinja2  persona_futurebot.jinja2
app/samples/: full_pipeline_test.py  gemini_sample.py  list_gemini_models.py  list_models.py  openai_client_sample.py  openai_sample.py  openrouter_client_sample.py  openrouter_sample.py  qwen_sample.py
app/services/: __init__.py  backend.py  chat_service.py  conversation_service.py  message_service.py
app/tools/: climate_control_tool.py  create_output_tool.py  document_search_tool.py  events_tool.py  fast_image_generation_tool.py  football_tool.py  google_places_search_tool.py  google_search_tool.py  light_control_tool.py  notes_tool.py  profi_image_generation_tool.py  smarthome_tool.py  spotify_tool.py  task_tool.py  tool_factory.py  weather_tool.py  youtube_music_tool.py
app/utils/: __init__.py  backend_client.py  general_utils.py  intent_config.py  llm_parser.py  openai_utils.py  provider_utils.py  retry_utils.py  schema_filter.py  status_messages.py  stream_utils.py  tool_executor.py  tools_utils.py  trace_utils.py  url_validator.py
scripts/: audit_schema_tokens.py  full_pipeline_test.py  jira_tool.py  nano_banana_sample.py  openai_client_sample.py  openrouter_client_sample.py
scripts/eval/: assertion_engine.py  eval_runner.py  eval_types.py  judge.py  report.py
specs/001-url-validator/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
tests/: conftest.py  test_agent_pipeline.py  test_document_search_tool.py  test_llm_parser.py  test_status_messages.py  test_stream_utils.py  test_tool_executor.py  test_tool_factory.py  test_tools_utils.py  test_url_validator.py
(+32 files in other folders)
